<resources>
    <string name="app_name">\tШАГ</string>
    <string name="ru_enter">Войти</string>
    <string name="ru_reg">Еще нет аккаунта? Регистрация</string>
    <string name="ru_welcome">Добро\nпожаловать</string>
    <string name="ru_reg_text">Регистрация</string>
    <string name="ru_reg_button">Зарегистрироваться</string>
    <string name="ru_hint_email">Электронная почта</string>
    <string name="ru_confirm_pass">Подтвердите пароль</string>
    <string name="ru_hint_pass">Пароль</string>
    <string name="ru_logout">Выйти</string>
    <string name="ru_profileInfo">Данные профиля</string>
    <string name="ru_nextActivity">Далее</string>
    <string name="ru_iamdriver">Я водитель</string>
    <string name="ru_uptowork">За работу!</string>
    <string name="ru_enterYourId">Ваш идентификатор</string>
    <string name="ru_goodWork">Удачных\n маршрутов</string>
    <string name="ru_getNewDriverId">Перевыпустить идентификатор</string>
    <string name="ru_getNewDriverIdInfo">Для получения нового\nводительского идентификатора\nобратитесь в главное здание\nили свяжитесь с администратором\nпо номеру\n\n8 800 555 35 35</string>
    <string name="ru_copyNumber">Скопировать номер в буфер обмена</string>
    <string name="ru_adminMenu">Панель\n администратора</string>
    <string name="ru_add">Добавить</string>
    <string name="ru_delete">Удалить</string>
    <string name="ru_id">Идентификатор</string>
    <string name="ru_3name">ФИО</string>
    <string name="ru_numberOfWay">Маршрут</string>
    <string name="ru_generateCopy">Сгенерировать\n + копировать</string>
    <string name="ru_nextPage">Далее</string>
    <string name="ru_pashalka">PHP для даунов</string>
    <string name="ru_driverslist">Список водителей</string>



    <string name="map_not_ready">Map is not ready yet</string>
    <string name="settings">Settings</string>

    <!--    Marker info window strings    -->
    <string name="snippet_zone1">Bus Zone 1: Encounter Bay - 3 stops</string>
    <string name="snippet_zone2">Bus Zone 2: Beachfront Holiday Park - 1 stop</string>
    <string name="snippet_zone3">Bus Zone 3: Adare Caravan Park - 1 stop</string>
    <string name="snippet_zone4">Bus Zone 4: Hayborough &amp; Port Elliot - 4 stops</string>
    <string name="snippet_zone5">Bus Zone 5: Middleton &amp; Goolwa - 7 stops</string>
    <string name="snippet_warland_reserve">Schoolies Festival™ Warland Reserve</string>

    <!--    Location permission    -->
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map.</string>
    <string name="location_permission_denied">This feature requires location permission to enable
        the \'my location\' layer. Please try again and grant access to use the location.\nIf the
        permission has been permanently denied, it can be enabled from the
        System Settings &gt; Apps &gt; \'Snag a Snag\'.</string>
    <string name="permission_required_toast">Location permission is required for this feature.</string>
</resources>
