<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    tools:context=".MainActivity"
    android:theme="@android:style/Theme.Black.NoTitleBar">

    <EditText
        android:id="@+id/passwordIdConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="441dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ru_confirm_pass"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#FF00BD"
        android:textColorHint="#000000"
        android:textColorLink="#FF00BD"
        android:textCursorDrawable="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/registrationButton"
        app:layout_constraintStart_toStartOf="@+id/passwordId"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ru_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHighlight="#FF00BD"
        android:textColorHint="#000000"
        android:textColorLink="#FF00BD"
        android:textCursorDrawable="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.435" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="sans-serif-thin"
        android:hint="@string/ru_hint_pass"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHighlight="#FF00BD"
        android:textColorHint="#000000"
        android:textColorLink="#FF00BD"
        android:textCursorDrawable="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailId" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="265dp"
        android:layout_height="65dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/round_button"
        android:text="@string/ru_reg_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordIdConfirm" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="129dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="center"
        android:text="@string/ru_reg_text"
        android:textColor="#000000"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>